[gd_scene load_steps=10 format=3 uid="uid://guy552h6jltk"]

[ext_resource type="Theme" uid="uid://dxbr2pe0xoeby" path="res://assets/theme/main_theme.tres" id="1_hjk36"]
[ext_resource type="Texture2D" uid="uid://d4e048h4rv6bb" path="res://assets/img/attributes.png" id="1_ntd0c"]
[ext_resource type="Script" uid="uid://bdiryxumx4r3n" path="res://hero_creation/hero_creation.gd" id="2_yfv7x"]
[ext_resource type="Texture2D" uid="uid://c5crnfwg3lwyl" path="res://assets/img/btn1.png" id="3_n1wo6"]
[ext_resource type="Texture2D" uid="uid://b2x7o7ognf3q4" path="res://assets/img/x_btn1.png" id="4_el4w6"]
[ext_resource type="Texture2D" uid="uid://bwsncca7makd0" path="res://assets/img/accept_btn1.png" id="4_qi0hw"]
[ext_resource type="Texture2D" uid="uid://b7egansu1kkw0" path="res://assets/img/x_btn2.png" id="5_qdwdt"]
[ext_resource type="Texture2D" uid="uid://isunv4jk5h3a" path="res://assets/img/accept_btn2.png" id="5_ssf5x"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7onh3"]
texture = ExtResource("3_n1wo6")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0

[node name="HeroCreation" type="CanvasLayer"]
script = ExtResource("2_yfv7x")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hjk36")
theme_override_constants/separation = 0

[node name="Left" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 6

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7onh3")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = -1
theme_override_constants/margin_top = -1
theme_override_constants/margin_right = -1
theme_override_constants/margin_bottom = -1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="RoleBtn" type="Button" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Role"

[node name="RaceBtn" type="Button" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Background"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
self_modulate = Color(0.64705884, 0.1882353, 0.1882353, 1)
layout_mode = 2
texture = ExtResource("1_ntd0c")

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
self_modulate = Color(0.45882353, 0.654902, 0.2627451, 1)
layout_mode = 2
texture = ExtResource("1_ntd0c")

[node name="Label2" type="Label" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/TextureRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
self_modulate = Color(0.30980393, 0.56078434, 0.7294118, 1)
layout_mode = 2
texture = ExtResource("1_ntd0c")

[node name="Label3" type="Label" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/TextureRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
self_modulate = Color(0.9098039, 0.75686276, 0.4392157, 1)
layout_mode = 2
texture = ExtResource("1_ntd0c")

[node name="Label4" type="Label" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/TextureRect4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 2

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "HP: 16 / 4"

[node name="Label2" type="Label" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Damage: 5"

[node name="Label3" type="Label" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Armor: 2"

[node name="Label4" type="Label" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = -8

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="XBtn" type="TextureButton" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("4_el4w6")
texture_hover = ExtResource("5_qdwdt")

[node name="AcceptBtn" type="TextureButton" parent="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("4_qi0hw")
texture_hover = ExtResource("5_ssf5x")

[node name="RolesContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = 120.0
offset_top = 16.0
offset_right = 216.0
offset_bottom = 116.0
theme = ExtResource("1_hjk36")
theme_override_constants/separation = -1

[connection signal="pressed" from="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/RoleBtn" to="." method="_on_role_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/RaceBtn" to="." method="_on_race_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3/XBtn" to="." method="_on_x_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer3/AcceptBtn" to="." method="_on_accept_btn_pressed"]
